Add clear fix to the css class "smw-hero"

--- a/app/assets/css/globales/mixins.less
+++ b/app/assets/css/globales/mixins.less
@@ -10,11 +10,15 @@
 }
 
 
-.transition-background(@time: 300ms) {
-	-webkit-transition: background-color @time linear;
-	   -moz-transition: background-color @time linear;
-	     -o-transition: background-color @time linear;
-	    -ms-transition: background-color @time linear;
-	        transition: background-color @time linear;
-
+.clearfix {
+	*zoom: 1;
+	&:before,
+	&:after {
+		display: table;
+		content: "";
+		line-height: 0;
+	}
+	&:after {
+		clear: both;
+	}
 }
