--- a/app/views/imprint.html
+++ b/app/views/imprint.html
@@ -1,28 +1,39 @@
 <div class="smw-page">
 	<header class="bar bar-nav">
-		<a href="#" class="icon icon-left-nav pull-left" ng-click="goBackward()"></a>
+		<a class="icon icon-left-nav pull-left" ng-click="goBackward($event)"></a>
 		<h1 class="title">{{ 'IMPRINT_TITLE' | translate }}</h1>
 	</header>
-	<div class="content content-padded">
-		<h2>{{ 'APP_NAME' | translate }}</h2>
-		<h4>{{ 'IMPRINT_TITLE' | translate }}</h4>
-		<p>
-			Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut
-			laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation
-			ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat.
-		</p>
-		<p>
-			Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore
-			eu feugiat nulla facilisis at vero et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril
-			delenit augue duis dolore te feugait nulla facilisi. Lorem ipsum dolor sit amet, consectetuer
-			adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.
-		</p>
-		<p>
-			Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea
-			commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat,
-			vel illum dolore eu feugiat nulla facilisis at vero et accumsan et iusto odio dignissim qui blandit
-			praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi. Nam liber tempor cum
-			soluta nobis eleifend option congue nihil imperdiet doming id quod mazim placerat facer possim assum.
-		</p>
+	<div class="content">
+		<div class="content-padded">
+			<h2>{{ 'APP_NAME' | translate }}</h2>
+			<h4>{{ 'IMPRINT_TITLE' | translate }}</h4>
+			<p>
+				Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut
+				laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation
+				ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat.
+			</p>
+			<p>
+				Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore
+				eu feugiat nulla facilisis at vero et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril
+				delenit augue duis dolore te feugait nulla facilisi. Lorem ipsum dolor sit amet, consectetuer
+				adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.
+			</p>
+			<p>
+				Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea
+				commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat,
+				vel illum dolore eu feugiat nulla facilisis at vero et accumsan et iusto odio dignissim qui blandit
+				praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi. Nam liber tempor cum
+				soluta nobis eleifend option congue nihil imperdiet doming id quod mazim placerat facer possim assum.
+			</p>
+		</div>
+		<ul class="table-view">
+			<li class="table-view-cell">
+				<a class="navigate-right" ng-href="#/about">{{ 'CMD_ABOUT' | translate }}</a>
+			</li>
+			<li class="table-view-cell">
+				<a class="navigate-right" href="#">{{ 'CMD_WHAT_IS_NEW' | translate }}</a>
+			</li>
+
+		</ul>
 	</div>
 </div>
