Add a login page

--- a/app/assets/css/pages.less
+++ b/app/assets/css/pages.less
@@ -20,4 +20,15 @@
 		margin-right: 0.1em;
 	}
 
+	&.smw-small {
+
+		.fa {
+			font-size: 1.4em;
+			margin-right: 0.3em;
+		}
+
+		h1 {
+			font-size: 1.4em;
+		}
+	}
 }
