--- a/app/views/login.html
+++ b/app/views/login.html
@@ -1,6 +1,6 @@
 <div class="smw-page">
 	<header class="bar bar-nav">
-		<a class="icon icon-left-nav pull-left" ng-click="goBackward($event)"></a>
+		<backward></backward>
 		<h1 class="title">{{ 'LOGIN_TITLE' | translate }}</h1>
 	</header>
 	<div class="content">
