--- a/app/views/startup.html
+++ b/app/views/startup.html
@@ -12,6 +12,9 @@
 		</div>
 		<ul class="table-view">
 			<li class="table-view-cell">
+				<a class="navigate-right" ng-href="#/signup">{{ 'CMD_SIGNUP' | translate }}</a>
+			</li>
+			<li class="table-view-cell">
 				<a class="navigate-right" ng-href="#/login">{{ 'CMD_LOGIN' | translate }}</a>
 			</li>
 			<li class="table-view-cell">
