--- a/app/views/home.html
+++ b/app/views/home.html
@@ -1,6 +1,17 @@
 <div class="smw-page">
 	<header class="bar bar-nav">
-		<h1 class="title">Home</h1>
+		<a class="btn pull-right" href="#homeSidebar"><i class="fa fa-bars"></i></a>
+		<h1 class="title">{{ 'HOME_TITLE' | translate }}</h1>
 	</header>
 	<div class="content"></div>
+	<div class="popover" id="homeSidebar">
+		<header class="bar bar-nav">
+			<h1 class="title">{{ 'SIDEBAR_HOME' | translate }}</h1>
+		</header>
+		<ul class="table-view">
+			<li class="table-view-cell">
+				<a href="#/logout"><i class="fa fa-sign-out"> {{ 'CMD_LOGOUT' | translate }}</i></a>
+			</li>
+		</ul>
+	</div>
 </div>
