--- a/app/views/home.html
+++ b/app/views/home.html
@@ -1,10 +1,10 @@
 <div class="smw-page">
 	<header class="bar bar-nav">
-		<button class="btn pull-left" ng-click="showSidebar()"><i class="fa fa-bars"></i></button>
+		<button class="btn pull-right" ng-click="showSidebar()"><i class="fa fa-bars"></i></button>
 		<h1 class="title">{{ 'HOME_TITLE' | translate }}</h1>
 	</header>
 	<div class="content"></div>
-	<sidebar sidebar-id="homeSidebar" position="left">
+	<sidebar sidebar-id="homeSidebar" position="right">
 		<header class="bar bar-nav">
 			<h1 class="title">{{ 'SIDEBAR_HOME' | translate }}</h1>
 		</header>
