--- a/app/assets/css/globales/mixins.less
+++ b/app/assets/css/globales/mixins.less
@@ -22,3 +22,15 @@
 		clear: both;
 	}
 }
+
+.borderTopLeft(@radius: 6px) {
+	-webkit-border-top-left-radius: @radius;
+	    -moz-border-radius-topleft: @radius;
+	        border-top-left-radius: @radius;
+}
+
+.borderTopRight(@radius: 6px) {
+	-webkit-border-top-right-radius: @radius;
+	-moz-border-radius-topright: @radius;
+	border-top-right-radius: @radius;
+}
