Improve the directive "inputText"
change the access

--- a/app/views/login.html
+++ b/app/views/login.html
@@ -12,8 +12,8 @@
 			{{ message }}
 		</p>
 		<form class="input-group" name="loginForm">
-			<input-text label="'LABEL_EMAIL'" type="'text'" placeholder="'PLACEHOLDER_EMAIL'" model="user.email"></input-text>
-			<input-text label="'LABEL_PASSWORD'" type="'password'" placeholder="'PLACEHOLDER_PASSWORD'" model="user.password"></input-text>
+			<input-text label="LABEL_EMAIL" type="text" placeholder="PLACEHOLDER_EMAIL" model="user.email"></input-text>
+			<input-text label="LABEL_PASSWORD" type="password" placeholder="PLACEHOLDER_PASSWORD" model="user.password"></input-text>
 		</form>
 		<div class="content-padded">
 			<button class="btn btn-positive btn-block" ng-click="loginUser()">{{ 'CMD_LOGIN' | translate }}</button>
