--- a/app/views/signup.html
+++ b/app/views/signup.html
@@ -12,10 +12,10 @@
 			{{ message }}
 		</p>
 		<form class="input-group" name="signupForm">
-			<input-text type="'text'" label="'LABEL_NAME'" placeholder="'PLACEHOLDER_NAME'" model="user.user"></input-text>
-			<input-text type="'email'" label="'LABEL_EMAIL'" placeholder="'PLACEHOLDER_EMAIL'" model="user.email"></input-text>
-			<input-text type="'password'" label="'LABEL_PASSWORD'" placeholder="'PLACEHOLDER_PASSWORD'" model="user.password"></input-text>
-			<input-text type="'password'" label="'LABEL_REPEAT'" placeholder="'PLACEHOLDER_REPEAT'" model="user.repeat"></input-text>
+			<input-text type="text" label="LABEL_NAME" placeholder="PLACEHOLDER_NAME" model="user.user"></input-text>
+			<input-text type="email" label="LABEL_EMAIL" placeholder="PLACEHOLDER_EMAIL" model="user.email"></input-text>
+			<input-text type="password" label="LABEL_PASSWORD" placeholder="PLACEHOLDER_PASSWORD" model="user.password"></input-text>
+			<input-text type="password" label="LABEL_REPEAT" placeholder="PLACEHOLDER_REPEAT" model="user.repeat"></input-text>
 			<div class="input-row smw-input-check">
 				<label><div class="toggle" ng-click="checkAGB()"><div class="toggle-handle"></div></div></label>
 				<p><a ng-href="#/agb">{{ 'MSG_SIGNUP_AGB' | translate }}</a></p>
